# CapaHub

./: Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/src/: app_context.rs  capability.rs  config.rs  event.rs  eventbus.rs  js_runtime.rs  lib.rs  logger.rs  plugin.rs  plugin_context.rs  plugin_manager.rs  render_intent.rs  storage.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: bootstrap.rs  capability.rs  hook_manager.rs  hotkey.rs  icon_loader.rs  js_runtime.rs  log_window.rs  main.rs  plugin_manager_window.rs  render_intent.rs  storage.rs  tray.rs  webview_host.rs  window_manager.rs
crates/desktop/src/act/: input.rs  mod.rs  screen.rs
crates/desktop/src/clipboard/: events.rs  mod.rs
crates/desktop/src/overlay/: mod.rs
crates/plugin_api/: Cargo.toml
crates/plugin_api/src/: event.rs  lib.rs  plugin.rs  plugin_context.rs
plugins/template/: Cargo.toml  plugin.toml
plugins/template-js/: main.js  plugin.toml
plugins/template/src/: lib.rs
scripts/: build_plugin.ps1  deploy-plugin.bat  pack-plugin.bat  run.bat
