[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"
serde_json = "1"
libloading = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
rquickjs = { version = "0.7", features = ["parallel", "macro"] }
rusqlite = { version = "0.31", features = ["bundled"] }
