[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
plugin_api = { path = "../plugin_api" }
crossbeam-channel = "0.5"
chrono = "0.4"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
]
