[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "capahub"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
plugin_api = { path = "../plugin_api" }
crossbeam-channel = "0.5"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rquickjs = { version = "0.7", features = ["parallel", "macro"] }

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
]

[dependencies.webview2]
version = "0.1"

[dependencies.winapi]
version = "0.3"
features = ["windef"]
